--- a/Web/tampilan.css
+++ b/Web/tampilan.css
@@ -62,8 +62,8 @@ input {
   font-weight: 700;
 }
 
-h5 {
-  color: rgb(122, 122, 122);
+.tengah h5 {
+  color: rgb(255, 255, 255);
   font-family: sans-serif;
   text-align: center;
   font-weight: 200;
@@ -88,9 +88,22 @@ h5 {
   color: white;
   justify-content: center;
   align-items: center;
-  gap: 30px;
+  gap: 40px;
   font-weight: bold;
   font-size: 16px;
+}
+
+.iconnext {
+  height: 20px;
+  width: 20px;
+}
+
+.footer {
+  display: flex;
+  font-size: 14px;
+  gap: 14px;
+  margin-top: 40px;
+  justify-content: center;
 }
 
 .kanan {
